--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,9 @@
 <div class="text-field">
+  <%= form.label :username %>
+  <%= form.text_field :username %>
+</div>
+
+<div class="text-field">
   <%= form.label :email %>
   <%= form.email_field :email %>
 </div>
