--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,6 +1,3 @@
-<div>
-  <%= link_to 'prices', admin_stripe_prices_path %>
-</div>
-<div>
-  <%= link_to 'products', admin_products_path %>
-</div>
+Welcome to the admin portal.
+
+Manage users, products, and subscriptions here.
