--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= yield :head %>
   </head>
 
-  <body style="background-color: black; color: white;">
+  <body>
+    <%= render 'layouts/partials/flash' %>
     <%= render 'layouts/partials/navigation' %>
     <%= yield %>
   </body>
