--- a/app/views/layouts/partials/_navigation.html.erb
+++ b/app/views/layouts/partials/_navigation.html.erb
@@ -1,8 +1,7 @@
 <div class="top-nav-container" data-controller="navigation">
   <nav id="top-nav">
     <%= link_to root_path do %>
-      L
-      <!--img src="/images/chopperx48.png" alt="Logo" style="height: 31px;"-->
+      <img src="/images/logo.png" alt="Logo" style="height: 31px;">
     <% end %>
 
     <!-- Hamburger Icon -->
